Fixed a quick bug with the navbar z-index

--- a/ad-lister-react/src/App.css
+++ b/ad-lister-react/src/App.css
@@ -34,6 +34,7 @@
 
 .navbar {
   position: fixed;
+  z-index: 2;
   width: 100%; }
   .navbar .navbar-text:hover {
     color: black;
